Add transifex support

--- a/composer.json
+++ b/composer.json
@@ -40,12 +40,23 @@
 	"require":{
 		"php":">=5.3",
 		"contao/core":"~2.11",
+		"contao-community-alliance/composer-installer": "dev-master",
 		"metamodels/core":"~1"
+	},
+	"require-dev": {
+		"metamodels/php-coding-standard":"dev-master",
+		"cyberspectrum/contao-toolbox": "dev-master"
 	},
 	"extra":{
 		"contao": {
 			"symlinks":{
 				"src/system/modules/metamodelsattribute_translatedtext":"system/modules/metamodelsattribute_translatedtext"
+			},
+			"transifex": {
+				"project": "metamodels",
+				"prefix": "attribute_translatedtext-",
+				"languages_cto": "src/system/modules/metamodelsattribute_translatedtext/languages",
+				"languages_tx": ".tx"
 			}
 		}
 	}
