--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,10 @@
 		"metamodels/core":"~2.0.0"
 	},
 	"require-dev": {
-		"metamodels/php-coding-standard":"dev-master",
-		"cyberspectrum/contao-toolbox": "dev-master"
+		"metamodels/php-coding-standard": "*",
+		"pdepend/pdepend": "1.1.*",
+		"phpunit/phpunit": ">=3.7.10,<4-dev",
+		"phpmd/phpmd": "1.5"
 	},
 	"conflict": {
 		"contao/core": "3.0.*"
@@ -70,5 +72,6 @@
 		"branch-alias": {
 			"dev-tng": "2.0.x-dev"
 		}
-	}
+	},
+	"minimum-stability": "dev"
 }
