--- a/composer.json
+++ b/composer.json
@@ -1,77 +1,72 @@
 {
-	"name":"metamodels/attribute_translatedtext",
-	"description":"MetaModels attribute for translated text",
-	"keywords":["contao", "metamodels", "attribute", "text", "translatable"],
-	"type":"contao-module",
-	"homepage":"http://now.metamodel.me/",
-	"license":"LGPL-3.0+",
-	"authors":[
-		{
-			"name":"Christian Schiffler",
-			"email":"c.schiffler@cyberspectrum.de",
-			"homepage":"http://www.cyberspectrum.de",
-			"role":"Developer"
-		},
-		{
-			"name":"Andreas Isaak",
-			"email":"info@andreas-isaak.de",
-			"homepage":"http://www.andreas-isaak.de",
-			"role":"Developer"
-		},
-		{
-			"name":"Stefan Heimes",
-			"email":"stefan_heimes@hotmail.com",
-			"role":"Developer"
-		},
-		{
-			"name":"Christian de la Haye",
-			"email":"service@delahaye.de",
-			"homepage":"http://www.delahaye.de/",
-			"role":"Developer"
-		}
-	],
-	"support":{
-		"email":"mail@metamodel.me",
-		"issues":"https://github.com/MetaModels/attribute_translatedtext/issues",
-		"wiki":"http://de.contaowiki.org/MetaModels",
-		"irc":"irc://irc.freenode.org/contao.mm",
-		"source":"https://github.com/MetaModels/attribute_translatedtext"
-	},
-	"require":{
-		"php":">=5.3",
-		"contao/core": ">=2.11,<4.0",
-		"contao-community-alliance/composer-plugin": "*",
-		"metamodels/core":"~2.0.0"
-	},
-	"require-dev": {
-		"metamodels/php-coding-standard": "*",
-		"pdepend/pdepend": "1.1.*",
-		"phpunit/phpunit": ">=3.7.10,<4-dev",
-		"phpmd/phpmd": "1.5"
-	},
-	"conflict": {
-		"contao/core": "3.0.*"
-	},
-	"autoload": {
-		"psr-0": {
-			"MetaModels": "src/system/modules/metamodelsattribute_translatedtext"
-		}
-	},
-	"extra":{
-		"contao": {
-			"symlinks":{
-				"src/system/modules/metamodelsattribute_translatedtext":"system/modules/metamodelsattribute_translatedtext"
-			},
-			"transifex": {
-				"project": "metamodels",
-				"prefix": "attribute_translatedtext-",
-				"languages_cto": "src/system/modules/metamodelsattribute_translatedtext/languages",
-				"languages_tx": ".tx"
-			}
-		},
-		"branch-alias": {
-			"dev-tng": "2.0.x-dev"
-		}
-	},
-	"minimum-stability": "dev"
+  "name": "metamodels/attribute_translatedtext",
+  "description": "MetaModels attribute for translated text",
+  "keywords": [
+    "contao",
+    "metamodels",
+    "attribute",
+    "text",
+    "translatable"
+  ],
+  "type": "contao-module",
+  "homepage": "http://now.metamodel.me/",
+  "license": "LGPL-3.0+",
+  "authors": [
+    {
+      "name": "Christian Schiffler",
+      "email": "c.schiffler@cyberspectrum.de",
+      "homepage": "http://www.cyberspectrum.de",
+      "role": "Developer"
+    },
+    {
+      "name": "Stefan Heimes",
+      "email": "stefan_heimes@hotmail.com",
+      "role": "Developer"
+    }
+  ],
+  "support": {
+    "email": "mail@metamodel.me",
+    "issues": "https://github.com/MetaModels/attribute_translatedtext/issues",
+    "wiki": "http://de.contaowiki.org/MetaModels",
+    "irc": "irc://irc.freenode.org/contao.mm",
+    "source": "https://github.com/MetaModels/attribute_translatedtext"
+  },
+  "require": {
+    "php": ">=5.3",
+    "contao/core": ">=3.2,<3.5",
+    "contao-community-alliance/composer-plugin": "~2.0",
+    "metamodels/core": "~2.0"
+  },
+  "require-dev": {
+    "cyberspectrum/contao-toolbox": "dev-master",
+    "contao-community-alliance/build-system": "~1.0",
+    "contao-community-alliance/build-system-all-tasks": "~1.0",
+    "contao-community-alliance/coding-standard": "~1.0",
+    "metamodels/base-unit-tests": "~1.0"
+  },
+  "conflict": {
+    "contao/core": "3.4.0"
+  },
+  "autoload": {
+    "psr-0": {
+      "MetaModels": "src"
+    }
+  },
+  "extra": {
+    "contao": {
+      "symlinks": {
+        "contao": "system/modules/metamodelsattribute_translatedtext"
+      },
+      "transifex": {
+        "project": "metamodels",
+        "prefix": "attribute_translatedtext-",
+        "languages_cto": "src/system/modules/metamodelsattribute_translatedtext/languages",
+        "languages_tx": ".tx"
+      }
+    },
+    "branch-alias": {
+      "dev-tng": "2.0.x-dev"
+    }
+  },
+  "minimum-stability": "dev"
 }
