--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,12 @@
   },
   "require": {
     "php": ">=5.3",
-    "contao/core": ">=3.2,<3.5",
+    "contao/core": ">=3.2,<3.6",
     "contao-community-alliance/composer-plugin": "~2.0",
     "metamodels/core": "~2.0"
   },
   "require-dev": {
-    "cyberspectrum/contao-toolbox": "dev-master",
+    "cyberspectrum/contao-toolbox": "~0.6",
     "phpcq/all-tasks": "~1.0",
     "metamodels/base-unit-tests": "~1.0"
   },
