--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,6 @@ For documentation visit:
   https://github.com/phpcq/phpcq
 
 -->
-<project name="MetaModels attribute translatedtext" default="build">
+<project name="metamodels/attribute-translatedtext" default="build">
   <import file="vendor/phpcq/phpcq/phpcq.main.xml"/>
 </project>
