--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,8 @@
   },
   "require-dev": {
     "cyberspectrum/contao-toolbox": "~0.6",
-    "phpcq/all-tasks": "~1.1",
-    "metamodels/base-unit-tests": "~1.0"
+    "phpcq/all-tasks": "~1.2",
+    "contao/manager-plugin": "~2.1"
   },
   "autoload": {
     "psr-4": {
@@ -65,15 +65,14 @@
       "dev-master": "2.0.x-dev",
       "dev-develop": "2.1.x-dev",
       "dev-feature/contao4": "2.1.x-dev"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "repositories": [
-      {
-        "type": "vcs",
-        "url": "git@gitlab.com:metamodels/core.git"
-      }
-    ]
+    }
   },
-  "prefer-stable": true
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@gitlab.com:metamodels/core.git"
+    }
+  ]
 }
