Fix icon path and add missing manager plugin registration.

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
     ]
   },
   "extra": {
+    "contao-manager-plugin": "MetaModels\\AttributeTranslatedTextBundle\\ContaoManager\\Plugin",
     "contao": {
       "transifex": {
         "project": "metamodels",
