Add missing tests and fix code style issues.

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,11 @@
       "src/deprecated-autoload.php"
     ]
   },
+  "autoload-dev": {
+    "psr-4": {
+      "MetaModels\\AttributeTranslatedTextBundle\\Test\\": "tests"
+    }
+  },
   "extra": {
     "contao-manager-plugin": "MetaModels\\AttributeTranslatedTextBundle\\ContaoManager\\Plugin",
     "contao": {
