--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,11 +9,10 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="tests/bootstrap.php"
   >
   <testsuites>
     <testsuite name="MetaModels attribute translated text tests">
-      <directory>./tests/MetaModels/</directory>
+      <directory>./tests/</directory>
     </testsuite>
   </testsuites>
 
@@ -25,7 +24,7 @@
 
   <filter>
     <whitelist>
-      <directory>./src/MetaModels/</directory>
+      <directory>./src/</directory>
     </whitelist>
   </filter>
 </phpunit>
