--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "contao/core": "^3.5.5",
     "contao-community-alliance/composer-plugin": "^2.0",
     "contao-community-alliance/dc-general": "^2.0@beta",
-    "metamodels/core": "^2.0"
+    "metamodels/core": "^2.0",
+    "metamodels/attribute_text": "^2.0"
   },
   "require-dev": {
     "cyberspectrum/contao-toolbox": "^0.7",
