--- a/composer.json
+++ b/composer.json
@@ -33,16 +33,16 @@
   },
   "require": {
     "php": "^5.6 || ^7.0",
-    "contao/core": "^3.5.5",
     "contao-community-alliance/composer-plugin": "^2.0",
     "contao-community-alliance/dc-general": "^2.0@beta",
-    "metamodels/core": "^2.0",
-    "metamodels/attribute_text": "^2.0"
+    "contao/core": "^3.5.5",
+    "metamodels/attribute_text": "^2.0",
+    "metamodels/core": "^2.0"
   },
   "require-dev": {
     "cyberspectrum/contao-toolbox": "^0.7",
-    "phpcq/all-tasks": "^1.2",
-    "metamodels/base-unit-tests": "^1.0"
+    "metamodels/base-unit-tests": "^1.0",
+    "phpcq/all-tasks": "^1.2"
   },
   "conflict": {
     "contao/core": "3.4.0"
@@ -68,5 +68,8 @@
       "dev-master": "2.0.x-dev",
       "dev-develop": "2.1.x-dev"
     }
+  },
+  "config": {
+    "sort-packages": true
   }
 }
