--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
   },
   "require-dev": {
     "contao/manager-plugin": "^2.1",
+    "menatwork/contao-multicolumnwizard-bundle": "^3.4.0@beta",
     "phpcq/all-tasks": "^1.2"
   },
   "autoload": {
@@ -65,16 +66,6 @@
       "dev-feature/contao4": "2.1.x-dev"
     }
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "git@gitlab.com:metamodels/core.git"
-    },
-    {
-      "type": "vcs",
-      "url": "git@gitlab.com:metamodels/attribute_text.git"
-    }
-  ],
   "config": {
     "sort-packages": true
   }
