--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
     "source": "https://github.com/MetaModels/attribute_translatedtext"
   },
   "require": {
-    "php": "^7.1",
+    "php": "^7.2",
     "contao-community-alliance/dc-general": "^2.1.3",
-    "contao/core-bundle": "^4.4.8",
+    "contao/core-bundle": "^4.9.0, <4.13.0",
     "metamodels/attribute_text": "^2.1",
     "metamodels/core": "^2.1.1",
     "symfony/dependency-injection": "^3.3 || ^4.0",
@@ -61,7 +61,7 @@
   "extra": {
     "contao-manager-plugin": "MetaModels\\AttributeTranslatedTextBundle\\ContaoManager\\Plugin",
     "branch-alias": {
-      "dev-master": "2.1.x-dev"
+      "dev-feature/2.2.0": "2.2.x-dev"
     }
   },
   "config": {
