--- a/.check-author.yml
+++ b/.check-author.yml
@@ -10,6 +10,10 @@ mapping:
   'Christopher Boelter <christopher@boelter.eu>':
     - 'cboelter <christopher@boelter.eu>'
     - 'Christopher Boelter <christopher@boelter.eu>'
+  'Ingolf Steinhardt <info@e-spin.de>':
+    - 'xantippe <info@e-spin.de>'
+    - 'zonky2 <info@e-spin.de>'
+    - 'zonky <gitlab@e-spin.de>'
 
 copy-left:
   'Ingolf Steinhardt <info@e-spin.de>':
