Hotfix security update

--- a/build.xml
+++ b/build.xml
@@ -8,4 +8,5 @@ For documentation visit:
 -->
 <project name="metamodels/attribute-translatedtext" default="build">
   <import file="vendor/phpcq/phpcq/phpcq.main.xml"/>
+  <target name="phpspec" />
 </project>
